# tw

./: .dockerignore  .gitignore  .merlint  .ocamlformat  .pre-commit-config.yaml  CHANGES.md  CLAUDE.md  Dockerfile  LICENSE.md  Makefile  README.md  TODO.md  cascade  convert_colors.py  dump_css.ml  dump_p0.ml  dune  dune-project  dune-workspace  homebrew.yml  merlint.toml  navigation.css  package-lock.json  package.json  simple.css  simple.html  simple_page.html  test.html  test_color_order.ml  test_conversion.ml  test_css_output.ml  test_grad.html  test_hex2.html  test_hex_pp.ml  test_oklch.ml  test_op.html  test_p0.ml  test_parse.ml  test_responsive.html  test_reverse.ml  (+3 more)
.github/workflows/: ci.yml
.hooks/: remove-claude-lines.py
bench/: bench.ml  dune
docs/: adding-a-new-utility.md  tailwind-v4.md  variables-and-layers.md
examples/: README.md  dune  index.ml  simple.ml  simple_page.ml  v4.ml  v4_demo.ml
examples/accessibility/: dune  main.ml
examples/animations/: dune  main.ml
examples/cards/: dune  main.ml
examples/colors/: dune  main.ml
examples/dark_mode/: dune  main.ml
examples/dashboard/: dune  main.ml
examples/forms/: dune  input.css  main.ml  tailwind.config.js
examples/hero/: dune  main.ml
examples/landing/: dune  main.ml
examples/layout/: dune  main.ml
examples/modifiers/: dune  main.ml  modifiers.css  tailwind-layer-01
examples/navigation/: dune  main.ml
examples/prose/: README.md  dune  main.ml
examples/simple/: dune  main.ml  simple.css  simple.html  simple.tailwind.css
examples/v3/: dune  main.ml  v3.css  v3.html  v3.tailwind.css
examples/v4/: dune  main.ml  v4.css  v4.html  v4.tailwind.css
fuzz/: dune  fuzz.ml  fuzz_font_face.ml  fuzz_font_face.mli  fuzz_keyframe.ml  fuzz_keyframe.mli  fuzz_reader.ml  fuzz_reader.mli  fuzz_selector.ml  fuzz_selector.mli  fuzz_stylesheet.ml  fuzz_stylesheet.mli  fuzz_supports.ml  fuzz_supports.mli  fuzz_values.ml  fuzz_values.mli  gen_corpus.ml
fuzz/corpus/: angle_deg  angle_rad  angle_turn  calc  calc_complex  calc_divide  calc_multiply  calc_nested  color_currentcolor  color_hex3  color_hex8  color_hsl  color_hsla  color_hwb  color_lch  color_mix  color_oklab  color_oklch  color_rgb  color_rgb_modern  color_rgba  duration_s  edge_special_chars  edge_whitespace  font_metric_pct  font_size_adjust  font_src_local  font_src_url  keyframe_multi  keyframes  layer  length_px  length_rem  length_vw  media  media_complex  property  rule_custom_prop  rule_multi_decl  rule_nested  (+27 more)
lib/: accessibility.ml  accessibility.mli  alignment.ml  alignment.mli  animations.ml  animations.mli  arbitrary.ml  arbitrary.mli  aspect.ml  aspect.mli  backgrounds.ml  backgrounds.mli  borders.ml  borders.mli  box_sizing.ml  box_sizing.mli  build.ml  build.mli  clipping.ml  clipping.mli  color.ml  color.mli  columns.ml  columns.mli  contain.ml  contain.mli  containers.ml  containers.mli  core.ml  core.mli  css.ml  css.mli  cursor.ml  cursor.mli  display.mli  divide.ml  divide.mli  dune  effects.ml  effects.mli  (+109 more)
lib/.claude/: settings.local.json
lib/css/: container.ml  container.mli  css.ml  css.mli  declaration.ml  declaration.mli  declaration_intf.ml  dune  font_face.ml  font_face.mli  keyframe.ml  keyframe.mli  media.ml  media.mli  optimize.ml  optimize.mli  optimize_intf.ml  pp.ml  pp.mli  properties.ml  reader.ml  (+21 more)
lib/info/: dune  tw_info.ml  tw_info.mli
scripts/: bench.sh  check_api_consistency.ml  check_properties.ml  compare_css.ml  compare_intf_with_mdn.py  compare_tailwind_property_order.js  cssdiff.ml  docker-run.sh  dune  outline.py  split_scaffold.py
test/: check_order.ml  dune  test.ml  test_accessibility.ml  test_accessibility.mli  test_alignment.ml  test_alignment.mli  test_animations.ml  test_animations.mli  test_arbitrary.ml  test_arbitrary.mli  test_aspect.ml  test_backgrounds.ml  test_backgrounds.mli  test_borders.ml  test_borders.mli  test_box_sizing.ml  test_box_sizing.mli  test_build.ml  test_build.mli  test_clipping.ml  test_clipping.mli  test_color.ml  test_color.mli  test_columns.ml  test_columns.mli  test_contain.ml  test_container.ml  test_containers.ml  test_containers.mli  test_core.ml  test_css.ml  test_css.mli  test_cursor.ml  test_cursor.mli  test_display.ml  test_display.mli  test_divide.ml  test_divide.mli  test_effects.ml  (+109 more)
test/cli/: apply.t  dune  input-css.t  placeholder.t  scan-content.t  variants.t
test/css/: dune  test.ml  test_container.ml  test_css.ml  test_css.mli  test_declaration.ml  test_font_face.ml  test_font_family_vars.ml  test_helpers.ml  test_helpers.mli  test_keyframe.ml  test_media.ml  test_optimize.ml  test_optimizer.ml  test_pp.ml  test_pp.mli  test_properties.ml  test_properties.mli  test_property.ml  test_reader.ml  test_reader.mli  test_render.ml  test_selector.ml  test_stylesheet.ml  test_supports.ml  test_values.ml  test_variables.ml  test_version.ml
test/css/examples/: dune  empty_tailwind.css
test/css/helpers/: css_test_helpers.ml  css_test_helpers.mli  dune
test/css/parser/: dune  test.ml  test_css_parser.ml  test_custom_property.ml  test_declaration.ml  test_helpers.ml  test_parse.ml  test_parse.mli  test_property.ml  test_reader.ml  test_rendering.ml  test_rule.ml  test_selector.ml  test_values.ml
test/dom/: dune  test.ml  test_tw_dom.ml  test_tw_dom.mli
test/helpers/: dune  test_helpers.ml  test_helpers.mli
test/html/: dune  test.ml  test_tw_html.ml  test_tw_html.mli
test/info/: dune  test.ml  test_tw_info.ml  test_tw_info.mli
test/lib/: css_compare.ml  css_debug.ml  css_debug.mli  dune  tailwind_reference.ml
test/tools/: dune  test.ml  test_css_compare.ml  test_css_compare.mli  test_css_debug.ml  test_css_debug.mli  test_diff_format.ml  test_diff_format.mli  test_helpers.ml  test_helpers.mli  test_string_diff.ml  test_string_diff.mli  test_tailwind_gen.ml  test_tailwind_gen.mli  test_tree_diff.ml  test_tree_diff.mli
test/tools/helpers/: dune  tools_test_helpers.ml  tools_test_helpers.mli
test/upstream/: dune  extract_tests.ml  test.ml  test_upstream.ml  utilities.txt  variants.txt
todo/: prose.md  reader.md  vars.md
(+49 files in other folders)
