(executables
 (public_names simple v4)
 (libraries tw tw.html))

; Generate HTML/CSS for simple example

(rule
 (targets simple.html simple.css)
 (deps simple.exe)
 (action
  (run ./simple.exe)))

; Generate HTML/CSS for v4 example

(rule
 (targets v4.html v4.css)
 (deps v4.exe)
 (action
  (run ./v4.exe)))

; Test rule that runs comparison

(rule
 (alias runtest)
 (deps simple.html simple.css v4.html v4.css ../scripts/compare_css.exe)
 (action
  (run ../scripts/compare_css.exe)))
