(executable
 (name cssdiff)
 (libraries tw_tools fmt))

(executable
 (name check_properties)
 (libraries str fmt))

(executable
 (name check_api_consistency)
 (libraries re unix fmt))

(rule
 (alias runtest)
 (deps
  (:properties %{project_root}/lib/css/properties.ml)
  (:properties_intf %{project_root}/lib/css/properties_intf.ml)
  (:script check_properties.exe))
 (action
  (run %{script})))

;; Run API consistency check but don't fail on existing issues
;; This helps catch NEW inconsistencies while allowing existing ones

(rule
 (alias runtest)
 (deps
  (glob_files %{project_root}/lib/css/*_intf.ml)
  (glob_files %{project_root}/lib/css/*.mli)
  (glob_files %{project_root}/test/css/test_*.ml)
  (:script check_api_consistency.exe))
 (action
  (progn
   (with-accepted-exit-codes
    (or 0 1)
    (run %{script}))
   (echo
    "\nNote: API consistency check completed. Fix issues to improve codebase quality.\n"))))
