(executables
 (public_names cssdiff check_properties check_api_consistency)
 (names cssdiff check_properties check_api_consistency)
 (libraries tw_tools re unix fmt fmt.cli fmt.tty cmdliner))

(rule
 (alias runtest)
 (deps
  (:properties %{project_root}/lib/css/properties.ml)
  (:properties_intf %{project_root}/lib/css/properties_intf.ml)
  (:script check_properties.exe))
 (action
  (run %{script})))

;; Run API consistency check and fail if issues are found
;; This ensures CSS API test consistency is maintained

(rule
 (alias runtest)
 (deps
  (glob_files %{project_root}/lib/css/*_intf.ml)
  (glob_files %{project_root}/lib/css/*.mli)
  (glob_files %{project_root}/test/css/test_*.ml)
  (:script check_api_consistency.exe))
 (action
  (run %{script})))
