(executable
 (name main)
 (libraries tw tw.html))

(rule
 (targets index.html accessibility.css)
 (deps main.exe)
 (action
  (run ./main.exe))
 (mode
  (promote (until-clean))))

(rule
 (targets tailwind.css)
 (deps index.html input.css ../../package-lock.json)
 (action
  (run npx tailwindcss -i input.css -o %{targets} --minify))
 (mode
  (promote (until-clean))))

(rule
 (alias runtest)
 (deps accessibility.css tailwind.css ../../scripts/cssdiff.exe)
 (action
  (run
   ../../scripts/cssdiff.exe
   --color=always
   accessibility.css
   tailwind.css)))
