(executable
 (name main)
 (libraries tw tw.html))

(rule
 (targets index.html accessibility.css)
 (deps main.exe)
 (action
  (run ./main.exe))
 (mode
  (promote (until-clean))))

(rule
 (target input.css)
 (action
  (write-file %{target} "@import 'tailwindcss';\n")))

(rule
 (targets tailwind.css)
 (enabled_if %{bin-available:npx})
 (deps index.html input.css ../../package-lock.json)
 (action
  (run npx tailwindcss -i input.css -o %{targets} --minify))
 (mode
  (promote (until-clean))))

(rule
 (alias runtest)
 (enabled_if %{bin-available:npx})
 (deps accessibility.css tailwind.css)
 (action
  (setenv
   CASCADE_COLOR
   always
   (run
    %{bin:cascade}
    diff
    --diff=canonical
    --prune-unused-custom-props
    accessibility.css
    tailwind.css))))
