(executable
 (name main)
 (libraries tw tw.html))

(rule
 (targets index.html dashboard.css)
 (deps main.exe)
 (action
  (run ./main.exe))
 (mode
  (promote (until-clean))))

(rule
 (target input.css)
 (action
  (write-file %{target} "@import 'tailwindcss';\n")))

(rule
 (targets tailwind.css)
 (deps index.html input.css ../../package-lock.json)
 (action
  (run npx tailwindcss -i input.css -o %{targets} --minify))
 (mode
  (promote (until-clean))))

(rule
 (alias runtest)
 (deps dashboard.css tailwind.css)
 (action
  (run cssdiff --color=always dashboard.css tailwind.css)))
