(executable
 (name main)
 (libraries tw tw.html))

; Generate HTML/CSS for forms example

(rule
 (targets index.html forms.css)
 (deps main.exe)
 (action
  (run ./main.exe))
 (mode
  (promote (until-clean))))

; Generate reference CSS with Tailwind CLI (requires forms plugin)

(rule
 (targets tailwind.css)
 (deps index.html input.css tailwind.config.js)
 (action
  (run
   npx
   tailwindcss
   -i
   input.css
   --content
   index.html
   -o
   %{targets}
   --minify
   --optimize))
 (mode
  (promote (until-clean))))

(rule
 (alias runtest)
 (deps forms.css tailwind.css ../../scripts/cssdiff.exe)
 (action
  (run ../../scripts/cssdiff.exe --color=always tailwind.css forms.css)))
