(executable
 (name main)
 (libraries tw tw.html))

; Generate HTML/CSS for forms example

(rule
 (targets index.html forms.css)
 (deps main.exe)
 (action
  (run ./main.exe))
 (mode
  (promote (until-clean))))

; Generate reference CSS with Tailwind CLI (requires forms plugin)

(rule
 (targets tailwind.css)
 (enabled_if %{bin-available:npx})
 (deps index.html input.css ../../package-lock.json)
 (action
  (run
   npx
   tailwindcss
   -i
   input.css
   --content
   index.html
   -o
   %{targets}
   --minify
   --optimize))
 (mode
  (promote (until-clean))))

(rule
 (alias runtest)
 (enabled_if %{bin-available:npx})
 (deps forms.css tailwind.css)
 (action
  (setenv
   CASCADE_COLOR
   always
   (run
    %{bin:cascade}
    diff
    --diff=canonical
    --prune-unused-custom-props
    tailwind.css
    forms.css))))
