(executable
 (name main)
 (libraries tw tw.html))

; Generate HTML/CSS for prose example

(rule
 (targets index.html prose.css)
 (deps main.exe)
 (action
  (bash "cp main.exe /tmp/prose_main.exe && /tmp/prose_main.exe"))
 (mode
  (promote (until-clean))))

; Generate reference CSS with Tailwind CLI (requires typography plugin)

(rule
 (targets tailwind.css)
 (deps index.html input.css)
 (action
  (run
   npx
   tailwindcss
   -i
   input.css
   --content
   index.html
   -o
   %{targets}
   --minify
   --optimize))
 (mode
  (promote (until-clean))))

(rule
 (alias runtest)
 (deps prose.css tailwind.css ../../scripts/cssdiff.exe)
 (action
  (bash
   "cp ../../scripts/cssdiff.exe /tmp/cssdiff.exe && /tmp/cssdiff.exe --color=always tailwind.css prose.css")))
