(executable
 (name main)
 (libraries tw tw.html))

; Generate HTML/CSS for simple example

(rule
 (targets simple.html simple.css)
 (deps main.exe)
 (action
  (run ./main.exe))
 (mode
  (promote (until-clean))))

; Generate Tailwind CSS for simple example

(rule
 (targets simple.tailwind.css)
 (deps simple.html)
 (action
  (run npx tailwindcss --content %{deps} -o %{targets} --minify))
 (mode
  (promote (until-clean))))

; Test rule that runs comparison

(rule
 (alias runtest)
 (deps simple.css simple.tailwind.css ../../scripts/compare_css.exe)
 (action
  (run ../../scripts/compare_css.exe simple.css simple.tailwind.css)))
