(library
 (name tw_info)
 (public_name tw.info)
 (libraries dune-build-info))

; Packaging builds (bottler) export PROJECT_VERSION and expect the binary to
; report that exact string; Tw_info falls back to dune-build-info and then
; "dev" when it is unset.

(rule
 (target project_version.ml)
 (deps
  (env_var PROJECT_VERSION))
 (action
  (with-stdout-to
   %{target}
   (bash "printf 'let env = \"%s\"\\n' \"${PROJECT_VERSION:-dev}\""))))
